@@ -97,8 +97,13 @@ NOTE: sorry, this is very raw :)
  ## awake.mid : crash near the end
  ## crash when emptying tempo in control view [reported, not tested] 
  
+ * ram-zet, rip.midi : when you hit play, the whole song plays higher than it should...
+ * ram-zet, rip.midi : try deleting all tempo events. crash.
+ 
 * copy/paste in controller mode (or at least disable them!) 
-* OS X : run export to audio in a thread, test animated Pulse()
+
++ when wait dialog appears, you can still edit tracks and do operations that may be harmful to current process.
+    yet you can't make it modal otherwise the background process stops.
 
 + linux: scons install fails from SVN because docs are not found
 + linux: no need to install icns files
